changed splines to acknowledge end points with nullptr. Full algorithm implemented

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -8,5 +8,5 @@ target_link_libraries(RunFrenetOptimalTrajectory LibFrenetTrajectoryOptimization
 add_executable(TestPolynomial TestPolynomial.cpp)
 target_link_libraries(TestPolynomial LibFrenetTrajectoryOptimization)
 
-add_executable(TestCubicSpline TestCubicSpline.cpp)
-target_link_libraries(TestCubicSpline LibFrenetTrajectoryOptimization)
+# add_executable(TestCubicSpline TestCubicSpline.cpp)
+# target_link_libraries(TestCubicSpline LibFrenetTrajectoryOptimization)
